--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Second Repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h3>Hello World!</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem illum eius earum expedita eligendi, fugiat omnis maiores qui! Accusamus molestiae porro autem, eligendi voluptates soluta iure illo inventore commodi! Dolores.</p>
     
 </body>
 </html>
