--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h3>Hello World!</h3>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem illum eius earum expedita eligendi, fugiat omnis maiores qui! Accusamus molestiae porro autem, eligendi voluptates soluta iure illo inventore commodi! Dolores.</p>
+    <img src="3.png" alt="">
     
 </body>
 </html>
