--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h3>Hello World!</h3>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem illum eius earum expedita eligendi, fugiat omnis maiores qui! Accusamus molestiae porro autem, eligendi voluptates soluta iure illo inventore commodi! Dolores.</p>
     <img src="3.png" alt="">
+    <img src="2.png" alt="">
+
     
 </body>
 </html>
